test/interactive010/expected
Prelude.List.(++) : List a -> List a -> List a
Prelude.Strings.(++) : String -> String -> String
a is not an implicit argument of Prelude.Interfaces./
Usage is :doc <functionname>
Usage is :wc <functionname>
Usage is :printdef <functionname>
pat {ty504} : Type toplevel.u. pat {__class505} : Prelude.Interfaces.Fractional {ty504}. Prelude.Interfaces./ {ty504} {__class505}

 : pty {ty504} : Type toplevel.u. pty {__class505} : Prelude.Interfaces.Fractional {ty504}. {ty504} -> {ty504} -> {ty504}
(input):1:1: error: expected: ":",
    dependent type signature,
    end of input
/<EOF> 
^      
(input):1:1: error: expected: ":",
    dependent type signature,
    end of input
++<EOF> 
^       
Can't find implementation for Fractional ty
